Connection PATCH + test + swagger
