# connections/views.py
@@ -8,7 +8,7 @@ from webargs.flaskparser import use_args
 
 from connections.extensions import db
 from connections.models.person import Person
-from connections.models.connection import Connection
+from connections.models.connection import Connection, ConnectionType
 from connections.schemas import ConnectionSchema, PersonSchema
 
 from connections.util import result_connection_to_json, validate
@@ -39,8 +39,8 @@ def create_person(person):
 @blueprint.route('/connections', methods=['GET'])
 def get_connection():
     a_person = aliased(Person)
-    result = db.session.query(Connection, Person, a_person)\
-        .join(Person, Connection.to_person_id == Person.id)\
+    result = db.session.query(Connection, Person, a_person) \
+        .join(Person, Connection.to_person_id == Person.id) \
         .join(a_person, Connection.from_person_id == a_person.id).all()
     return result_connection_to_json(result), HTTPStatus.OK
 
@@ -52,4 +52,14 @@ def create_connection(connection):
     return ConnectionSchema().jsonify(connection), HTTPStatus.CREATED
 
 
-
+@blueprint.route('/connections/<int:connection_id>', methods=['PATCH'])
+@use_args(ConnectionSchema(), locations=('json',))
+def update_connection(connection_data, connection_id):
+    connection = Connection.query.get(connection_id)
+    if connection is not None:
+        connection.connection_type = connection_data.connection_type
+        connection.save()
+        return ConnectionSchema().jsonify(connection), HTTPStatus.OK
+    else:
+        res = {"description": "Connection ID does not exist."}
+        return flask.jsonify(res), HTTPStatus.BAD_REQUEST
